# serde-derive-default

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: example.rs
src/: lib.rs
tests/: test.rs
tests/ui/fail/: enum.rs  enum.stderr
tests/ui/pass/: basic.rs
