[package]
name = "serde_derive_default"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "Derive Default using serde field level annotations"
homepage="https://github.com/BrynCooke/serde-derive-default"
repository="https://github.com/BrynCooke/serde-derive-default"
keywords = ["derive", "macro", "serde", "default"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version="2.0", features=["parsing"] }
quote = "1.0"
thiserror = "1.0.59"
regex = "1.10"


[dev-dependencies]
trybuild = "1.0.85"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
